<resources>
    <string name="app_name">QueryGenie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="queries">Запросы</string>
    <string name="query">Запрос</string>
    <string name="patterns">Шаблоны</string>
    <string name="history">История</string>
    <string name="help_text">Начните печатать…</string>
    <string name="query_head">Введите ваш запрос</string>
    <string name="send">Отправить</string>
    <string name="count">Использований</string>
    <string name="date">Дата</string>
    <string name="answer">Ответ</string>
    <string name="role">Роль</string>
    <string name="goal">Цель</string>
    <string name="environment">Окружение</string>
    <string name="pattern_head">Шаблон</string>
    <string name="use">Использовать</string>
    <string name="filter">Фильтр</string>
    <string name="save">Сохранить</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="not_found">Ничего не найдено :(</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="clear">Очистить</string>
    <string name="search">Поиск</string>
    <string name="all">Все</string>
    <string name="favourite">Избранное</string>
    <string name="namePattern">Название шаблона</string>
    <string name="savePattern">Шаблон сохранен</string>
    <string name="sort_date">По дате</string>
    <string name="sort_popular">По популярности</string>
    <string name="sort_clean">Сбросить фильтр</string>
    <string name="notification">Напоминание!</string>
    <string name="notification_text">QueryGenie скучает :( Пора отправить запрос!</string>

</resources>