<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/borders"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/font_family"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/favouriteBut"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/heart" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="1">

            <TableRow
                android:layout_margin="8dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_family"
                    android:text="@string/role"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="10"
                    android:fontFamily="@font/font_family"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_family"
                    android:text="@string/goal"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="10"
                    android:fontFamily="@font/font_family"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </TableRow>

            <TableRow
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_family"
                    android:text="@string/environment"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/environment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="10"
                    android:fontFamily="@font/font_family"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center">

            <Button
                android:id="@+id/useBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/but_style"
                android:fontFamily="@font/font_family"
                android:text="@string/use"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/editBut"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/edit" />

            <ImageButton
                android:id="@+id/deleteBut"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/delete" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>